<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cat1">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="130dp"
        android:background="#9EFFFFFF"
        android:text="@string/put_name_lastname"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="97dp"
        android:background="#9EFFFFFF"
        android:text="@string/put_phone"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/namelastname_id"
        android:layout_width="285dp"
        android:layout_height="53dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="52dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/name_lastname"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/phone_id"
        android:layout_width="285dp"
        android:layout_height="53dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="236dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/your_phone"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/gogogo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="257dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="18dp"
        android:onClick="onclick66"
        android:text="@string/go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_id" />

    <Button
        android:id="@+id/nazad_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="131dp"
        android:text="@string/cancle"
        app:layout_constraintEnd_toStartOf="@+id/gogogo_id"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_id" />

</androidx.constraintlayout.widget.ConstraintLayout>