<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cat1"
    tools:context=".account_helper.Okno_podtverdit">

    <TextView
        android:id="@+id/vi_hot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="199dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="154dp"
        android:background="#9CFAFAFA"
        android:text="@string/vi_hotite"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timetime"
        android:layout_width="104dp"
        android:layout_height="37dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="28dp"
        android:background="#92FFFFFF"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vi_hot" />

    <TextView
        android:id="@+id/datadata2"
        android:layout_width="104dp"
        android:layout_height="37dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="28dp"
        android:background="#92FFFFFF"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vi_hot" />

    <Button
        android:id="@+id/button_yaaas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="66dp"
        android:text="@string/yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timetime" />

    <Button
        android:id="@+id/button_nooo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="72dp"
        android:text="@string/cancle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timetime" />

</androidx.constraintlayout.widget.ConstraintLayout>